# c-piscine-42-lyon

./: .gitmodules  CMakeLists.txt  README.md  ft_sort_int_tab.c  gigacheck.sh
C00/ex00/: ft_putchar.c
C00/ex01/: ft_print_alphabet.c
C00/ex02/: ft_print_reverse_alphabet.c
C00/ex03/: ft_print_numbers.c
C00/ex04/: ft_is_negative.c
C00/ex05/: ft_print_comb.c  old_ft_print_comb.c
C00/ex06/: ft_print_comb2.c  old_ft_printcomb2
C00/ex07/: ft_putnbr.c
C01/: CMakeLists.txt  bigheader.h  bigmain.c
C01/ex00/: a.out  ft_ft.c
C01/ex01/: a.out  ft_ultimate_ft.c
C01/ex02/: a.out  ft_swap.c
C01/ex03/: ft_div_mod.c  n ft_div_mod.c
C01/ex04/: a.out  ft_ultimate_div_mod.c
C01/ex05/: a.out  ft_putstr.c
C01/ex06/: ft_strlen.c
C01/ex07/: .ft_rev_int_tab.c.swp  ft_rev_int_tab.c
C01/ex08/: .ft_sort_int_tab.c.swp  ft_sort_int_tab.c
C02/: .ft_strlowcase.c.swp  CMakeLists.txt
C02/ex00/: a.out  ft_strcpy.c
C02/ex01/: ft_strncpy.c
C02/ex02/: ft_str_is_alpha.c
C02/ex03/: ft_str_is_numeric.c
C02/ex04/: ft_str_is_lowercase.c
C02/ex05/: ft_str_is_uppercase.c
C02/ex06/: ft_str_is_printable.c
C02/ex07/: ft_strupcase.c
C02/ex08/: ft_strlowcase.c
C02/ex09/: .ft_strcapitalize.c.swp  ft_strcapitalize.c  ft_strcapitalize_fonctionnel.c
C02/ex10/: ft_strlcpy.c
C02/ex11/: ft_putstr_non_printable.c
C03/: CMakeLists.txt
C03/ex00/: ft_strcmp.c
C03/ex01/: ft_strncmp.c
C03/ex02/: ft_strcat.c
C03/ex03/: ft_strncat.c
C03/ex04/: ft_strstr.c
C04/: main.c
C04/ex00/: ft_strlen.c
C04/ex01/: ft_putstr.c
C04/ex02/: ft_putnbr.c
C04/ex03/: ft_atoi.c
C04/ex04/: ft_putnbr_base.c
C05/: CMakeLists.txt
C05/ex00/: a.out  ft_iterative_factorial.c
C05/ex01/: ft_recursive_factorial.c
C05/ex02/: ft_iterative_power.c
C05/ex03/: ft_recursive_power.c
C05/ex04/: ft_fibonacci.c
C05/ex05/: ft_sqrt.c
C05/ex06/: ft_is_prime.c
C05/ex07/: ft_find_next_prime.c
C06/: a.out
C06/ex00/: a.out  ft_print_program_name.c
C06/ex01/: a.out  ft_print_params.c
C06/ex02/: ft_rev_params.c
C06/ex03/: ft_sort_params.c
C07/: CMakeLists.txt
C07/ex00/: a.out  ft_strdup.c
C07/ex01/: ft_range.c
C07/ex02/: a.out  ft_ultimate_range.c
C07/ex03/: a.out  ft_strjoin.c
C08/: .gitignore  CMakeLists.txt  ft_stock_str.h
C08/ex00/: ft.h
C08/ex01/: ft_boolean.h
C08/ex02/: ft_abs.h  maintest.c
C08/ex03/: ft_point.h
C08/ex04/: a.out  ft_stock_str.h  ft_stock_str.h.gch  ft_strs_to_tab.c
C08/ex05/: a.out  ft_show_tab.c
CPiscine/: .gitignore
Rush00-b/ex00/: a.out  ft_putchar.c  main.c  rush01.c  rush03.c  rush04.c
Rush00/ex00/: main.c  rush00.c  rush02.c  rush03.c  rush04.c
Rush01/ex00/: CMakeLists.txt  a.out  ft_is_right_format.c  ft_showgrill.c  is_param_valid.c  main.c  old_ft_showgrill.c  ourlib.h  prog
Rush02/: README.md
Rush02/ex00/: CMakeLists.txt  ft_splitnumber.c  map.c
Rush02/ex00/lib/: a.out  atoi.c  error.c  ft_putstr.c  ft_strlen.c  ft_swap.c  ourlib.h  readfile.c
goodC06/ex00/: a.out
goodC06/ex02/: a.out  ft_rev_params.c
goodC06/ex03/: a.out
oldrush02/ex00/: ft_splitnumber.c
shell00/ex01/: testShell00
shell00/ex06/: .ignore
shell00bis/ex01/: testShell00.tar
shell00bis/ex02/: exo2.tar
shell00bis/ex03/: klist.txt
shell00bis/ex09/: ft_magic
shell01ter/ex02/: find_sh.sh
shell01ter/ex04/: MAC.sh
shell01ter/ex07/: r_dwssap.sh
traininig/: atoi.c  atoiwhite.c  bigheader.h  fibonacci_non_recursive.c  mylib.h  unistd.h
traininig/C00/: bigmain.c
traininig/C00/ex00/: a.out  ft_ft.c  ft_putchar.c
traininig/C00/ex03/: ft_print_numbers.c
traininig/C00/ex04/: ft_is_neg.c
traininig/C00/ex06/: ft_print_comb2.c
traininig/C00/ex07/: ft_putnbr.c
traininig/C01/: ft_ft.c
traininig/C01/ex00/: ft_ft.c
traininig/C01/ex01/: a.out  bidon  ft_ultimate.c
traininig/C01/ex02/: ft_swap.c
traininig/C01/ex03/: ft_div_mod.c
traininig/C01/ex04/: ft_ultimate_div_mod.c
traininig/C01/ex05/: ft_putstr.c
traininig/C01/ex06/: ft_strlen.c
traininig/C01/ex08/: ft_sort_int_tab.c
traininig/C02/ex00/: ft_strcpy.c
traininig/C02/ex01/: ft_strncpy.c
traininig/C02/ex02/: ft_str_is_alpha.c
traininig/C02/ex03/: ft_str_is_numeric.c
traininig/C02/ex04/: ft_str_is_lowercase.c
traininig/C02/ex05/: ft_str_is_uppercase.c
traininig/C02/ex06/: ft_str_is_printable.c
traininig/C02/ex07/: ft_strupcase.c
traininig/C02/ex08/: ft_strlowcase.c
traininig/C02/ex09/: ft_strcapitalize.c
traininig/C02/ex10/: ft_strlcpy.c
traininig/C02/ex11/: ft_putstr_non_printable.c
traininig/C03/ex00/: ft_strcmp.c
traininig/C03/ex01/: ft_strncmp.c
traininig/C03/ex02/: ft_strcat.c
traininig/C03/ex03/: ft_strncat.c
traininig/C03/ex04/: ft_strstr.c
traininig/C04/ex02/: ft_putnbr.c
traininig/C04/ex03/: ft_atoi.c
traininig/C04/ex04/: ft_putnbr_base.c
traininig/C05/ex00/: ft_iterative_factorial.c
traininig/C05/ex01/: ft_recursive_factorial.c
traininig/C05/ex02/: ft_iterative_power.c
traininig/C05/ex03/: ft_recursive_power.c
traininig/C05/ex04/: ft_fibonacci.c
traininig/C05/ex05/: ft_sqrt.c
traininig/C05/ex06/: ft_is_prime.c
traininig/C05/ex07/: ft_find_next_prime.c
traininig/C06/ex00/: ft_print_program_name.c
traininig/C06/ex01/: ft_print_params.c
traininig/C07/ex00/: ft_strdup.c
traininig/C07/ex01/: ft_range.c
traininig/Rush00/: a.out  ft_putchar.c  rush00.c
traininig/concepts/: readfile.c
(+3 files in other folders)
